--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ margin-top:20px;
     width: 850px;
 }
 
-#content{
+#con{
     
     margin: 70px;
 }
@@ -50,4 +50,80 @@ margin-top:20px;
     color: black;
 }
 
+body {
+    background-color: #f1f1f1;
+    padding;
+    font-family: Arial;
+  }
+  
+  /* Center website */
+  .main {
+    max-width: 1000px;
+    margin: auto;
+  }
+  
+ 
+  
+  .row {
+    margin: 8px -16px;
+  }
+  
+  /* Add padding BETWEEN each column (if you want) */
+  .row,
+  .row > .column {
+    padding: 8px;
+  }
+  
+  
+  .column {
+    float: left;
+    width: 40%;
+    display: none;
+    
+     
+  }
+  
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+ 
+  .content {
+    background-color: white;
+    padding: 10px;
+  }
+  
+  
+  .show {
+    display: block;
+  }
+  
+ 
+  .btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: white;
+    cursor: pointer;
+    margin-top: 30px;
+  }
+  
+ 
+  .btn:hover {
+    background-color: #ddd;
+  }
+  
+ 
+  .btn.active {
+    background-color: #666;
+     color: white;
+  }
+
+  .content:hover {
+    opacity: 0.5;
+    cursor: pointer;
+  }
 
